# legged_control_ros2_humble

./: README.md
dog_bringup/config/: 99-serial-can.rules  robot_controllers.yaml
dog_bringup/config/cdut_dog/: 99-serial-can.rules  robot_controllers.yaml
dog_bringup/config/cdut_dog/description/: reference.info  task.info
dog_bringup/config/lite3/description/: reference.info  task.info
dog_bringup/launch/: real.launch.py  sim.launch.py
dog_bringup/meshes/cdut_dog/: MID360.STL  foot.STL  hip.STL  shank.STL  thigh.STL  torso.STL
dog_bringup/xacro/cdut_dog/: const.xacro  dog.urdf  dog.xacro  leg.xacro  ros2_control.xacro
dog_bringup/xacro/lite3/: const.xacro  dog.urdf  dog.xacro  leg.xacro
dog_controllers/include/dog_controllers/: dog_nmpc_wbc_controller.hpp
dog_controllers/src/: TargetTrajectoriesPublisher.cpp  dog_nmpc_wbc_controller.cpp
dog_hardware/: CMakeLists.txt  dog_hardware.xml
dog_hardware/include/dog_hardware/: dog_gazebo_hw.hpp
dog_hardware/include/dog_hardware/IWT603/: wit_c_sdk.h
dog_hardware/include/dog_hardware/J60_6/: J60_6_hw.hpp  deep_motor_sdk.h
dog_hardware/src/: dog_gazebo_hw.cpp
dog_hardware/src/IWT603/: wit_c_sdk.c
dog_hardware/src/J60_6/: J60_6_hw.cpp
